--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -25,7 +25,7 @@ PAMELA
         <div class="col-md-8">
             <p>P.A.M.E.L.A. est l'interface permettant de voir qui est actuellement connecté sur le réseau du
                 Hackerspace.
-                Ci dessous les gens actuellements présents :</p>
+                Ci-dessous les gens actuellements présents :</p>
 
             <div id="pamela"></div>
         </div>
