--- a/users/templates/balance.html
+++ b/users/templates/balance.html
@@ -148,8 +148,8 @@
                         Verser</h4>
                 </div>
                 <div class="panel-body">
-                    <p class="text-muted">Vous pouvez dépenser directement l'argent dans la caisse.<br>
-                        Pour des gros montants, prière de faire <strong>un virement</strong></p>
+                    <p class="text-muted">Vous pouvez déposer directement l'argent dans la caisse.<br>
+                        Pour des gros montants, merci de faire <strong>un virement</strong> :-)</p>
                     <form class="form-inline" action="{% url "balance_top" %}" method="post">
                         {% csrf_token %}
                         <div class="form-group">
