--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -97,7 +97,7 @@
                         {% if request.user.is_authenticated %}
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    {% bootstrap_icon "off" %}
+                                    {% bootstrap_icon "cog" %}
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
