--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -22,6 +22,7 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link href="{% static "css/style.css" %}" rel="stylesheet">
+        <link rel="icon" href="/static/img/favicon.ico"/>
         <title>{% block title %}UrLab{% endblock %}</title>
         {% block head %}{% endblock %}
         {% analytical_head_bottom %}
