--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -9,15 +9,15 @@
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <html class="no-js" lang="en" >
 
-    <head>
-        {% analytical_head_top %}
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {% render_block "css" %}
-        {% block bootstrapcss %}
+<head>
+    {% analytical_head_top %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% render_block "css" %}
+    {% block bootstrapcss %}
         {% bootstrap_css %}
-        {% endblock %}
-        {% bootstrap_javascript jquery=1 %}
+    {% endblock %}
+    {% bootstrap_javascript jquery=1 %}
 
         <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -31,117 +31,121 @@
     {% analytical_body_top %}
     {% if request.user.is_authenticated and request.user.username == "SupayrPoney" %}
     <a href="http://www.reactivemanifesto.org/"> <img style="border: 0; position: fixed; right: 0; top:0; z-index: 9000" src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-red-right.png"> </a>
-    {% endif %}
-    {% if request.user.is_authenticated and request.user.username == "iTitou" %}
+{% endif %}
+{% if request.user.is_authenticated and request.user.username == "iTitou" %}
     <a href="http://www.reactivemanifesto.org/"> <img style="border: 0; position: fixed; right: 0; top:0; z-index: 9000" src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-red-right.png"> </a>
+{% endif %}
+<header class="base-header">
+    {% if space_open %}
+        <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders-open.png"/></a></div>
+    {% else %}
+        <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders.png"/></a></div>
     {% endif %}
-        <header class="base-header">
-        {% if space_open %}
-            <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders-open.png"/></a></div>
-        {% else %}
-            <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders.png"/></a></div>
-        {% endif %}
-        </header>
-        <div class="nav-wrapper">
-            <div id="nav">
-                <nav class="navbar navbar-default navbar-static-top navbar-shadow" >
-                    <div class="container-fluid">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuNavbar">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="/">
-                                <img src="/static/img/space_invader.png" height=20 width=20 />
+</header>
+<div class="nav-wrapper">
+    <div id="nav">
+        <nav class="navbar navbar-default navbar-static-top navbar-shadow" >
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">
+                        <img src="/static/img/space_invader.png" height=20 width=20 />
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="menuNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="{% ifcontains "/projects/" %}active{% endifcontains %}">
+                            <a href="{% url "projects_home" %}">
+                                <i class="fa fa-flask"></i>
+                                Nos projets
                             </a>
-                        </div>
-                        <div class="collapse navbar-collapse" id="menuNavbar">
-                            <ul class="nav navbar-nav">
-                                <li class="{% ifcontains "/projects/" %}active{% endifcontains %}">
-                                    <a href="{% url "projects_home" %}">
-                                        <i class="fa fa-flask"></i>
-                                        Nos projets
-                                    </a>
-                                </li>
-                                <li class="{% ifcontains "/events/" %}active{% endifcontains %}">
-                                    <a href="{% url "events_home" %}">
-                                        <i class="fa fa-calendar"></i>
-                                        Evénements
-                                    </a>
-                                </li>
-                                <li class="{% ifcontains "/wiki/" %}active{% endifcontains %}">
-                                    <a href="{% url "wiki:root" %}">
-                                        <i class="fa fa-pencil-square-o"></i>
-                                        Wiki
-                                    </a>
-                                </li>
-                                <li class="{% ifcontains "/space/pamela" %}active{% endifcontains %}">
-                                    <a href="{% url "pamela_list" %}">
-                                        <i class="fa fa-users"></i>
-                                        Pamela
-                                    </a>
-                                </li>
+                        </li>
+                        <li class="{% ifcontains "/events/" %}active{% endifcontains %}">
+                            <a href="{% url "events_home" %}">
+                                <i class="fa fa-calendar"></i>
+                                Evénements
+                            </a>
+                        </li>
+                        <li class="{% ifcontains "/wiki/" %}active{% endifcontains %}">
+                            <a href="{% url "wiki:root" %}">
+                                <i class="fa fa-pencil-square-o"></i>
+                                Wiki
+                            </a>
+                        </li>
+                        <li class="{% ifcontains "/space/pamela" %}active{% endifcontains %}">
+                            <a href="{% url "pamela_list" %}">
+                                <i class="fa fa-users"></i>
+                                Pamela
+                            </a>
+                        </li>
 
-                            </ul>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="/about/">About</a></li>
-                                {% if request.user.is_authenticated %}
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                        {% bootstrap_icon "user" %}
-                                        {{request.user.username}} <span class="caret"></span>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="{% url "profile" %}">{% bootstrap_icon "user" %} Profil</a></li>
-                                        <li><a href="{% url "change_balance" %}">{% bootstrap_icon "euro" %} Ardoise</a></li>
-                                        {% if request.user.is_staff %}
-                                        <li role="separator" class="divider"></li>
-                                        <li><a href="/admin">Administration</a></li>
-                                        {% endif %}
-                                        <li role="separator" class="divider"></li>
-                                        <li><a href="{% url "password_change" %}">Changer de mot de passe</a></li>
-                                        <li><a href="{% url "logout" %}?next=/">{% bootstrap_icon "disconnect" %}Déconnexion</a></li>
-                                    </ul>
-                                </li>
-                                {% else %}
-                                <li class="{% ifcontains "/auth/login" %}active{% endifcontains %}">
-                                    <a href="{% url "login" %}">Login / Register</a>
-                                </li>
-                                {% endif %}
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if request.user.is_authenticated %}
+                            <li><a href="{% url "profile" %}">{% bootstrap_icon "user" %} {{request.user.username}} </a></li>
+                            <li><a href="{% url "change_balance" %}">{% bootstrap_icon "euro" %} Ardoise</a></li>
+                        {% endif %}
+                        {% if request.user.is_staff %}
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/admin">
+                                {% bootstrap_icon "wrench" %}
+                                Administration</a></li>
+                        {% endif %}
+                        {% if request.user.is_authenticated %}
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    {% bootstrap_icon "cog" %}
+                                    <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/about/">About</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="{% url "password_change" %}">Changer de mot de passe</a></li>
+                                    <li><a href="{% url "logout" %}?next=/">{% bootstrap_icon "disconnect" %}Déconnexion</a></li>
+                                </ul>
+                            </li>
+                        {% else %}
+                            <li class="{% ifcontains "/auth/login" %}active{% endifcontains %}">
+                                <a href="{% url "login" %}">Login / Register</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
+    </div>
+</div>
 
-        <div class="container">
-            {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-            {% endfor %}
-            <br>
-            {% block content %}
-            {% endblock %}
-        </div>
-        <footer class="footer">
-            <div class="container">
-                <p class="text-muted">
-                    Made with love at
-                    <a href="http://urlab.be">
-                        <img src="/static/img/small-urlab.png" style="height: 1em;">
-                        UrLab</a> — Code on <a href="http://github.com/UrLab/incubator">GitHub</a>
-                    — <a href="/api">We haz an API</a>
-                    — <a href="http://cerkinfo.be">
-                    <img style="height: 1.0em;" src="/static/img/small-ci.png">
-                    Cerkinfo </a> —
+<div class="container">
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+    <br>
+    {% block content %}
+    {% endblock %}
+</div>
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">
+            Made with love at
+            <a href="http://urlab.be">
+                <img src="/static/img/small-urlab.png" style="height: 1em;">
+                UrLab</a> — Code on <a href="http://github.com/UrLab/incubator">GitHub</a>
+            — <a href="/api">We haz an API</a>
+            — <a href="http://cerkinfo.be">
+            <img style="height: 1.0em;" src="/static/img/small-ci.png">
+            Cerkinfo </a> —
 
-                    ULB — Scientia vincere tenebras
-                </p>
-            </div>
-        </footer>
-        {% render_block "js" %}
-        <script src="{% static "js/navbar.js" %}"></script>
-    {% analytical_body_bottom %}
-    </body>
+            ULB — Scientia vincere tenebras
+        </p>
+    </div>
+</footer>
+{% render_block "js" %}
+<script src="{% static "js/navbar.js" %}"></script>
+{% analytical_body_bottom %}
+</body>
 </html>
