--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -22,7 +22,7 @@ Projets à UrLab
   </h1>
 </div>
 <p>
-    Vous trouverez ici une grande partie des projets (en cours, sous forme de proposition ou finis) à UrLab. Tous ces projets sont ouverts à tous, n'hésitez pas à vous rajouter dans un projet pour aider, apprendre ou juste regarder.
+    Vous trouverez ici une grande partie des projets (en cours, <a href="#propositions">sous forme de proposition</a> ou <a href="#done">finis</a>) à UrLab. Tous ces projets sont ouverts à tous, n'hésitez pas à vous rajouter dans un projet pour aider, apprendre ou juste regarder.
     Vous êtes aussi invités à ajouter vos propres projets ci dessus, n'ayez pas peur, on est ouverts à tout !
 </p>
 
@@ -34,7 +34,7 @@ Projets à UrLab
     </div>
 {% endfor %}
 
-<h1>Projets finis</h1>
+<h1 id="done">Projets finis</h1>
 <p>Ici, vous trouverez les projets qui ont déjà été faits au hackerspace.</p>
 {% for row in done %}
     <div class="row">
@@ -44,7 +44,7 @@ Projets à UrLab
     </div>
 {% endfor %}
 
-<h1>Propositions de projets</h1>
+<h1 id="propositions">Propositions de projets</h1>
 <p>Parfois les gens n'ont pas le temps, pas les compétences pour faire un projet
 ou alors ont envie de le faire avec plus de monde. Parfois c'est juste une idée loufoque qui traine dans
 un coin de notre tête et qu'on veut noter quelque part...</p>
