The top balance div is no more visible on lg device

--- a/users/templates/balance.html
+++ b/users/templates/balance.html
@@ -27,7 +27,7 @@
         </h1>
     </div>
     <div class="row">
-        <div class="hidden-md col-sm-12">
+        <div class="hidden-md hidden-lg col-sm-12">
             {% if request.user.is_authenticated %}
                 <p>
                     {% if request.user == user %}
