--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -21,6 +21,11 @@
                   <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                   Fini
               </div>
+          {% elif project.status == 'a' %}
+              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                  Les fourmis sont parties
+              </div>
           {% else %}
               <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
                   Proposition
