--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -65,7 +65,7 @@
     {% elif project.status == 'a' %}
         <div class="progress">
             <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Les fourmis sont parties
+            {{project.ANT_CHAR}} Les fourmis sont parties
           </div>
         </div>
     {% else %}
