--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -62,6 +62,12 @@
             <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>  Fini
           </div>
         </div>
+    {% elif project.status == 'a' %}
+        <div class="progress">
+            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
+            {{project.ANT_CHAR}} Les fourmis sont parties
+          </div>
+        </div>
     {% else %}
         <div class="progress">
             <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
